css/WebRTSP.css
html, body {
    height: 100%;
    margin: 0px;
    padding: 0px;
}

#rootContainer {
    position:absolute;

    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;

    display: flex;
    flex-direction: column;
}

#buttonsContainer {
    margin-top: 5px;
    flex-grow: 0;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#buttonsContainer button {
    margin: 2px 2px;
}

#bodyContainer {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

#streamsContainer {
    margin: 5px 0px 5px 5px;

    flex-grow: 0;

    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    overflow-y: auto;
}

#streamsContainer button {
    margin: 2px 2px;
}


#videoContainer {
    position:relative;
    margin: 5px 10px 10px 10px;

    flex-grow: 1;

    background-color: LightGray;
}

#videoContainer video {
    position: absolute;

    max-width: 100%;
    max-height: 100%;

    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;

    margin: auto;

    background-color: black;
}

